style.css
body, html {
  margin: 0;
  font-family: 'Open Sans', sans-serif;
  text-align: center;

}

/* all content for hero */
.hero-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-image: url(./images/the-creative-exchange-d2zvqp3fpro-unsplash.jpg);
  background-size: cover;
  height: 100vh;
}

.hero-text {
  list-style-type: none;
}
.myname {
  font-size: 40px;
}
.myname p{
  font-size: 40px;
  letter-spacing: 5px;

}
.previous-job-title {
  font-size: 40px;
}

.job-title{
font-size: 40px;
}
.profile-pic {
width: 40vh;
border-radius: 200px;
margin-top: 20px;
}

.social-links img {
  width: 40px;
}
.social-links img:hover {
  width: 60px;
}
.hero-contact ul {
  list-style-type: none;
  padding: 10px 0px
}


.hero-contact li a, .hero-contact li  {
  text-decoration: none;
  font-size: 30px;
}

/* CONTENT */


/* common styles */
.tech, 
.feature-projects, 
.my-thought-about-code, 
.skills, 
.for-more {
  display: flex;
  flex-direction: column;
}

.tech h2, 
.feature-projects h2, 
.my-thought-about-code h2,
.skills h2,
.for-more h2 {
  background-color: red;
  color: white;
  border-radius: 5px;
  display: flex;
  justify-content: center;
  
}


/* introduction text */
.introduction-text {
  background-color: rgba(196, 196, 196, 0.2);
  padding : 20px 0px
}

/* tech */
.tech{
  padding : 20px 0px
}
.tech h2 {
  margin : 0 35vw;
}
.tech-content{
  word-spacing: 10px;
  font-size: 25px;
}

/* featured projects */
.feature-projects{
  background-color: rgba(196, 196, 196, 0.2);
  padding : 20px 0px
}
.feature-projects h2 {
  margin: 0 10vw
}

/* my thought about code */
.my-thought-about-code{
 padding: 20px 0px;
}
.my-thought-about-code h2 {
  margin: 0 5vw
}

/* my skills */
.skills {
  background-color: rgba(196, 196, 196, 0.2);
  list-style-type: none;
  padding : 20px 0px
}

.skills h2 {
  margin: 0 30vw;
}

/* for more */
.for-more{
  padding : 10px 0px;
}

.for-more h2 {
  margin: 0 25vw;
}
.for-more img {
  width : 50px;
  padding: 3vh 7vw;
  
}
.for-more img:hover {
  width: 70px;
}

/* footer */
footer {
  background-color: blue;
  color: white;
  padding : 20px 0px
}

/* all media queries */

@media (min-width: 700px) {
  .tech h2 {
    margin : 0 40vw;
  }
  .feature-projects h2 {
    margin: 0 30vw
  }
  .my-thought-about-code h2 {
    margin: 0 25vw
  }
  .skills h2 {
    margin: 0 40vw;
  }
  .for-more h2 {
    margin: 0 40vw;
  }
}
@media (min-width: 1100px) {
  .hero-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
  }

  .hero-container {
    padding-left: 300px;
    height: 70vh;
  }

  .hero-text {
    text-align:  left;
  }

  .hero-contact {
    padding-left: 150px;
  }

  .for-more{
    display: flex;
    padding : 40px 0px;
  }
  .tech h2 {
    margin : 0 45vw;
  }
  .feature-projects h2 {
    margin: 0 37vw
  }
  .my-thought-about-code h2 {
    margin: 0 33vw
  }
  .skills h2 {
    margin: 0 45vw;
  }
  .for-more h2 {
    margin: 0 43vw;
  }

}

